docs/v5.6.1/_sources/gallery/experiment/sphere/coupling_vs_phioffset.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/coupling_vs_phioffset.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_coupling_vs_phioffset.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_coupling_vs_phioffset.py:


Sphere: Goniometer
==================

.. GENERATED FROM PYTHON SOURCE LINES 6-50



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_phioffset_001.png
   :alt: coupling vs phioffset
   :srcset: /gallery/experiment/sphere/images/sphx_glr_coupling_vs_phioffset_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30eb29c10>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30eb2b510>, <matplotlib.lines.Line2D object at 0x7fe30eb2ae50>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30c303910>]





|

.. code-block:: Python

    from PyMieSim import (
        ureg,
        PhotodiodeSet,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
    )
    import numpy


    print_available()

    polarization_set = PolarizationSet(
        angles=[90.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[600, 1200] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )
    scatterer = SphereSet(
        diameter=[1000] * ureg.nanometer,
        material=[SellmeierMaterial(material_name="BK7")],
        medium=[1],
    )

    detector = PhotodiodeSet(
        numerical_aperture=[0.1, 0.15, 0.2],
        phi_offset=numpy.linspace(-180, 180, 200) * ureg.degree,
        cache_numerical_aperture=[0.05],
        gamma_offset=0 * ureg.degree,
        sampling=[400]
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source, detector_set=detector)

    result = experiment.get("coupling")

    result.plot(x="detector:phi_offset", y='coupling', std='detector:NA')


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.207 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_coupling_vs_phioffset.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_vs_phioffset.ipynb <coupling_vs_phioffset.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_vs_phioffset.py <coupling_vs_phioffset.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_vs_phioffset.zip <coupling_vs_phioffset.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
